[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/snowball_framework/source/scripts/interface/DebugOverlay.gd" type="Script" id=1]
[ext_resource path="res://addons/snowball_framework/assets/interface/theme/debug.tres" type="Theme" id=2]
[ext_resource path="res://addons/snowball_framework/source/scenes/interface/debug_console.tscn" type="PackedScene" id=3]

[node name="GuiDebug" type="CanvasLayer"]
pause_mode = 2
layer = 16
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 1880.0
margin_bottom = 1040.0
alignment = 1

[node name="ConsoleContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 1880.0
margin_bottom = 1040.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32

[node name="GuiConsole" parent="MarginContainer/HBoxContainer/ConsoleContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = 32.0
margin_right = 1848.0
margin_bottom = 1008.0

[node name="DebugInformation" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
visible = false
margin_left = 1254.0
margin_right = 1880.0
margin_bottom = 1040.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
alignment = 2

[node name="DisplayFramerate" type="RichTextLabel" parent="MarginContainer/HBoxContainer/DebugInformation"]
margin_right = 626.0
margin_bottom = 74.0
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15
bbcode_enabled = true
bbcode_text = "00"
tab_size = 5
text = "00"

[node name="DisplayGameTime" type="RichTextLabel" parent="MarginContainer/HBoxContainer/DebugInformation"]
margin_top = 78.0
margin_right = 626.0
margin_bottom = 152.0
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15
bbcode_enabled = true
tab_size = 5
text = "00:00:00"

[node name="DisplayPlayTime" type="RichTextLabel" parent="MarginContainer/HBoxContainer/DebugInformation"]
margin_top = 156.0
margin_right = 626.0
margin_bottom = 230.0
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15
bbcode_enabled = true
bbcode_text = "00"
tab_size = 5
text = "00"

[node name="DisplayCameraTarget" type="RichTextLabel" parent="MarginContainer/HBoxContainer/DebugInformation"]
margin_top = 234.0
margin_right = 626.0
margin_bottom = 308.0
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15
bbcode_enabled = true
bbcode_text = "00"
tab_size = 5
text = "00"

[node name="DisplayControllable" type="RichTextLabel" parent="MarginContainer/HBoxContainer/DebugInformation"]
margin_top = 312.0
margin_right = 626.0
margin_bottom = 386.0
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15
bbcode_enabled = true
bbcode_text = "00"
tab_size = 5
text = "00"

[node name="DisplayControllableTarget" type="RichTextLabel" parent="MarginContainer/HBoxContainer/DebugInformation"]
margin_top = 390.0
margin_right = 626.0
margin_bottom = 464.0
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15
bbcode_enabled = true
bbcode_text = "00"
tab_size = 5
text = "00"

[node name="DisplayChunkCoords" type="RichTextLabel" parent="MarginContainer/HBoxContainer/DebugInformation"]
margin_top = 468.0
margin_right = 626.0
margin_bottom = 542.0
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15
bbcode_enabled = true
bbcode_text = "0, 0"
tab_size = 5
text = "0, 0"

[node name="DisplayCoordinate" type="RichTextLabel" parent="MarginContainer/HBoxContainer/DebugInformation"]
margin_top = 546.0
margin_right = 626.0
margin_bottom = 1040.0
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "0, 0, 0"
tab_size = 5
text = "0, 0, 0"
